# montecarlo-portfolio-risk-gpu

./: .dockerignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  OBJECTIVES.md  RAPPORT.md  README.md  config.py  docker-compose.local.yml  docker-compose.prod.yml  environment.yml  index.html  main.py  main_complete.py  mkdocs.yml  pyproject.toml  sonar-project.properties  versions.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/workflows/: cd.yml  ci.yml  docs.yml  release.yml
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
dev/architecture/: index.html
dev/benchmarks/: index.html
dev/development/: index.html
dev/getting-started/: index.html
dev/glossary/: index.html
dev/search/: search_index.json
dev/user-guide/cli/: index.html
dev/user-guide/gpu/: index.html
dev/user-guide/pipeline/: index.html
docs/: api.md  architecture.md  benchmarks.md  development.md  getting-started.md  glossary.md  index.md
docs/user-guide/: cli.md  gpu.md  pipeline.md
notebooks/: demo-poc-branch.ipynb  demo.ipynb  exploration.ipynb  v1-demo.ipynb
scripts/: benchmark_monte_carlo.py  demo.py
src/portfolio_risk_engine/: __main__.py  cli.py
src/portfolio_risk_engine/application/: compare_engines.py  run_simulation.py
src/portfolio_risk_engine/application/use_cases/: compute_log_returns.py  compute_portfolio_risk.py  estimate_heston_parameters.py  estimate_market_parameters.py  estimate_student_t_parameters.py  fetch_market_data.py  run_monte_carlo.py  simulate_portfolio.py
src/portfolio_risk_engine/domain/: correlation.py  expected_shortfall.py  market_model.py  portfolio.py  var.py
src/portfolio_risk_engine/domain/entities/: asset.py
src/portfolio_risk_engine/domain/models/: asset.py  gbm_model.py  heston_model.py  historical_prices.py  historical_returns.py  market_parameters.py  portfolio.py  portfolio_risk_metrics.py  position.py  simulation_result.py  student_t_gbm.py
src/portfolio_risk_engine/domain/ports/: market_data_provider.py  monte_carlo_engine.py
src/portfolio_risk_engine/domain/services/: cholesky.py
src/portfolio_risk_engine/domain/value_objects/: currency.py  date_range.py  ticker.py  weight.py
src/portfolio_risk_engine/infrastructure/market_data/: yahoo_finance_market_data_provider.py
src/portfolio_risk_engine/infrastructure/rendering/: scenario_renderer.py
src/portfolio_risk_engine/infrastructure/simulation/: base.py  cpu_heston_engine.py  cpu_monte_carlo_engine.py  cpu_student_t_engine.py  gpu_accelerated_pipeline.py  gpu_heston_engine.py  gpu_monte_carlo_engine.py  gpu_student_t_engine.py  monte_carlo_cpu.py  monte_carlo_gpu.py
tests/: test_cholesky.py  test_cli.py  test_cpu_engine.py  test_gpu_engine.py  test_portfolio.py  test_risk_metrics.py
tests/application/use_cases/: test_compute_log_returns.py  test_compute_portfolio_risk.py  test_estimate_heston_parameters.py  test_estimate_market_parameters.py  test_estimate_student_t_parameters.py  test_fetch_market_data.py  test_run_monte_carlo.py  test_simulate_portfolio.py
tests/domain/: test_asset.py
tests/domain/models/: test_asset.py  test_gbm_model.py  test_heston_model.py  test_historical_prices.py  test_historical_returns.py  test_market_parameters.py  test_portfolio.py  test_portfolio_risk_metrics.py  test_position.py  test_simulation_result.py  test_student_t_gbm.py
tests/domain/services/: test_cholesky.py
tests/domain/value_objects/: test_currency.py  test_date_range.py  test_ticker.py  test_weight.py
tests/infrastructure/market_data/: test_yahoo_finance_market_data_provider.py
tests/infrastructure/rendering/: test_scenario_renderer.py
tests/infrastructure/simulation/: test_cpu_heston_engine.py  test_cpu_monte_carlo_engine.py  test_cpu_student_t_engine.py  test_gpu_accelerated_pipeline.py  test_gpu_monte_carlo_engine.py
tests/integration/: test_fetch_market_data.py  test_full_pipeline.py  test_get_asset.py
v0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.1/api/: index.html
v0.1.1/architecture/: index.html
v1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.0/api/: index.html
v1.0.0/architecture/: index.html
v1.0.0/benchmarks/: index.html
v1.0.0/development/: index.html
v1.0.0/getting-started/: index.html
v1.0.0/glossary/: index.html
v1.0.0/search/: search_index.json
v1.0.0/user-guide/cli/: index.html
v1.0.0/user-guide/gpu/: index.html
v1.0.0/user-guide/pipeline/: index.html
