[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs >= 0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "portfolio-risk-engine"
dynamic = ["version"]
requires-python = ">=3.13"
description = "This project implements a GPU-accelerated Monte Carlo engine to simulate multi-asset portfolio dynamics and estimate risk metrics such as Value at Risk (VaR) and Expected Shortfall."
authors = [
    { name = "Romain Blanchot", email = "romain.blanchot@nerionsoft.com"}
]
maintainers = [
    { name = "Romain Blanchot", email = "romain.blanchot@nerionsoft.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
#    "numba",
#    "cupy",
#    "scipy",
]


keywords = ["finance", "risk management", "portfolio analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Finance :: Investment",
    "Topic :: Software Development :: Libraries"
]
[project.urls]
Homepage = "https://github.com/romain-blanchot/montecarlo-portfolio-risk-gpu"
Documentation = "https://readthedocs.org"
Repository = "git@github.com:romain-blanchot/montecarlo-portfolio-risk-gpu.git"
Issues = "https://github.com/romain-blanchot/montecarlo-portfolio-risk-gpu/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
DOWNLOAD = "https://pypi.org/project/portfolio-risk-engine/#files"

[dependency-groups]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
]
lint = [
    "ruff",
    "mypy",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]

#[project.scripts]
#[project.optional-dependencies]